style for social networks block

--- a/style.css
+++ b/style.css
@@ -2640,11 +2640,11 @@ body.action-embed-index {
 /** Bloco de redes sociais **/
 .twitter_widget_topo {
   height: 50px;
-  background-image: url(images/twitter-widget.png);
+  background: url(images/twitter-widget.png) no-repeat;
 }
 
 .facebook_widget_topo {
   height: 50px;
-  background-image: url(images/facebook-widget.png);
+  background: url(images/facebook-widget.png) no-repeat;
 }
 
