style for social networks block

--- a/style.css
+++ b/style.css
@@ -2641,7 +2641,7 @@ body.action-embed-index {
 
 /** Bloco de redes sociais **/
 .social_widget {
-  .margin-left: 5px;
+  margin-left: 5px;
 }
 
 .social_widget .social_header {
