--- a/style.css
+++ b/style.css
@@ -1911,8 +1911,8 @@ input.button.with-text {
     left: -11px;
 }
 /*título do bloco de pessoas dentro do container */
-.action-home-index #content .box-1 .container-block-plugin_container-block .people-block .block-title, 
-.action-environment_design-index #content .box-1 .container-block-plugin_container-block .people-block .block-title {
+.action-home-index #content .box-1 .container-block-plugin_container-block .block .block-title, 
+.action-environment_design-index #content .box-1 .container-block-plugin_container-block .block .block-title {
     padding-left: 10px;
     padding-bottom: 24px;
 /*teste*/  top: -2px; left: -24px;
