--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@ body {
  /* with this 1em = 10px */;
 }
 
+.profile-image-block .admin-link {
+	font-size: 100%;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
@@ -97,6 +101,10 @@ a:visited, #content a:visited, dl.portlet a:visited {
 
 #content a:hover, dl.portlet a:hover {
 	color: #000;
+}
+
+#category-ajax-selector .select-subcategory-link:hover {
+	color: #fff;
 }
 
 body div.overlaybg div.close,
@@ -146,6 +154,10 @@ p {
 	padding: 1em 0;
 	max-width: 960px;
 	margin: 0 auto;
+}
+
+.article-types .description {
+	/*font-size: x-small;*/
 }
 
 /* Menu List left */
@@ -1146,7 +1158,7 @@ div#article-parent {
 }
 
 #content .button-bar a.icon-cancel span{
-	vertical-align: text-top;
+	vertical-align: text-middle;
 }
 
 input.button.with-text {
