--- a/style.css
+++ b/style.css
@@ -2251,56 +2251,66 @@ input.button.with-text {
 	text-align: center;
 }
 
-#pairwise_main p {
+#pairwise_main ul.pairwise_menu {
 	background-color: white;
-	color: #131313;
+	color: #ECF2E7;
 }
 
-#pairwise_main p.right {
-	text-align: right;
-	display: block;
-	padding: 14px;
+#pairwise_main ul.pairwise_menu li {
+	display: inline;
 }
 
-/*tirar a barra vertical | separando os #pairwise_main p.right a */
-
-#pairwise_main p.right a{
-	color: #b3c4a6;
-	font-size: 14px;
-	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-}
-
-#pairwise_main p.right a.active{
+#pairwise_main ul.pairwise_menu li a {
 	color: #497b16;
 }
 
-#pairwise_main div.prompt {
+#pairwise_main .pairwise_content {
+	background-color: #ECF2E7;
+}
+
+#pairwise_main .pairwise_body {}
+
+#pairwise_main .pairwise_call_for_action {}
+
+#pairwise_main .prompt {
 	background-color: #D0E2BF;
 	border-width: 0px;
 	max-width: 360px;
 	min-height: 190px;
 }
 
-#pairwise_main div.skip_vote {
+#pairwise_main .skip_vote {
 	width: 95%;
 	background-color: #7d8874;
 	font-size: 15px;
 	color: #fff;
 }
 
-#pairwise_main div.show_new_idea_box {
-	display: none !important;
-}
+#pairwise_main .skip_vote_reasons {}
 
-#pairwise_main div#suggestions_box {
-	display: block !important;
-}
+#pairwise_main .skip_vote_reasons ul {}
 
-#suggestions_box .suggestion_header {
-	display: none;
-}
+#pairwise_main .skip_vote_reasons ul li {}
 
-#pairwise_main div#suggestions_box #new_idea_button {
+#pairwise_main #suggestions_box {}
+
+#pairwise_main #suggestions_box span {}
+
+#pairwise_main .suggestion_form {}
+
+#pairwise_main #suggestion_box_fields {}
+
+#pairwise_main .div_text_input_container {}
+
+#pairwise_main .div_text_input_container .div_text_input {}
+
+#pairwise_main .div_text_input_container .div_text_input textarea {}
+
+#pairwise_main .div_text_input_container .div_text_input .jqEasyCounterMsg {}
+
+#pairwise_main .div_text_input_container .suggest_idea_btn {}
+
+#pairwise_main .div_text_input_container .suggest_idea_btn input#new_idea_button{
     background: url("images/botao-enviar-pairwise.png") no-repeat top center #CCCCCC;
     border-radius: 0px;
     cursor: pointer;
@@ -2310,42 +2320,12 @@ input.button.with-text {
     width: 93px;
 }
 
-/*Colocar "#idea_text" e "div.jqEasyCounterMsg" em uma div separada (se possível com uma classe diferente) (div A)*/
-/*Colocar essa nova div e a div que tem o botão "#new_idea_button" em uma nova div (div B)*/
-
-/*
-Deve ficar mais ou menos assim:
-
-
-<div id="suggestion_box_fields">
-		<div class="error">
-	       
-	    </div>
-	    <div class="notice">
-	    </div>
-	<div class="(div B)"> 
-		<div class="(div A)">
-	    <textarea placeholder="Digite aqui sua idéia" cols="40" rows="4" id="idea_text" maxlenght="160" name="idea[text]"></textarea>
-			<div class="jqEasyCounterMsg" style="font-size: 100%; font-family: inherit; color: rgb(0, 0, 0); text-align: right; width: 100%; opacity: 1;">131</div>
-		</div>
-
-	    <div style="width: 100%; text-align: center; display: inline;">
-	      <input type="submit" value="Enviar sugestão" id="new_idea_button" class="button with-text icon- submit" name="commit">
-	    </div>
-	</div>
-
-	  </div>
-
-Precisamos adicionar alguns elementos como o botão "escolher esta contribuição" dentro do prompt e o logo do usuário no canto superior direito.
-Devo chegar cedo na segunda feira para terminar o css.
-
-*/
-
 
 /*Fim Pairwise*/
 
 /*:::::::::::Acessibilidade:::::::::::*/
 /************* Contraste *************/
+
 
 body.contraste,
 body.contraste #wrap-2,
