--- a/style.css
+++ b/style.css
@@ -2273,10 +2273,15 @@ input.button.with-text {
 #pairwise_main .pairwise_call_for_action {}
 
 #pairwise_main .prompt {
-	background-color: #D0E2BF;
+	background: url("images/prompt_bg.png") no-repeat top center #548A1C;
 	border-width: 0px;
 	max-width: 360px;
 	min-height: 190px;
+}
+
+#pairwise_main .prompt.outra {
+	background-image: none;
+	background-color: #D0E2BF;
 }
 
 #pairwise_main .skip_vote {
