--- a/style.css
+++ b/style.css
@@ -2295,15 +2295,14 @@ input.button.with-text {
 }
 
 #pairwise_main .prompt {
-	background: url("images/prompt_bg.png") no-repeat top center #548A1C;
+	background-color: #D0E2BF;
 	border-width: 0px;
 	max-width: 360px;
 	min-height: 190px;
 }
 
-#pairwise_main .prompt.left {
-	background-image: none;
-	background-color: #D0E2BF;
+#pairwise_main .prompt:hover {
+	background: url("images/prompt_bg.png") no-repeat top center #548A1C;
 }
 
 #pairwise_main .skip_vote {
