--- a/style.css
+++ b/style.css
@@ -2299,6 +2299,7 @@ input.button.with-text {
 	border-width: 0px;
 	max-width: 360px;
 	min-height: 190px;
+	border-width: 0 !important;
 }
 
 #pairwise_main .prompt:hover {
@@ -2311,6 +2312,9 @@ input.button.with-text {
 	font-size: 15px !important;
 	color: #fff;
 	padding: 1em 0 !important;
+	border-width: 0px !important;
+	border-radius: 7px 7px 0px 0px !important;
+	
 
 /*cópia do css do plugin*/
 /*
@@ -2335,13 +2339,15 @@ input.button.with-text {
 
 }
 
-#pairwise_main .skip_vote_reasons {}
+#pairwise_main .skip_vote_reasons {background-color: #7D8874;padding-top: 0 !important;}
 
 #pairwise_main .skip_vote_reasons ul {margin: 0; padding: 1em;}
 
 #pairwise_main .skip_vote_reasons ul li {color: white; padding: 0.5em 0.5em 0.5em 2em; text-align: left;}
 
-#pairwise_main .skip_vote_reasons ul li a {color: white;}
+#pairwise_main .skip_vote_reasons ul li:hover{background-color:#ECF2E7;}
+
+#pairwise_main .skip_vote_reasons ul li a {color: white;text-decoration: none;font-size: 14px;}
 
 #pairwise_main #suggestions_box {
 	display: block !important;
