--- a/style.css
+++ b/style.css
@@ -2306,6 +2306,12 @@ input.button.with-text {
 	background: url("images/prompt_bg.png") no-repeat top center #548A1C;
 }
 
+#pairwise_main .separator {
+    display: inline-block;
+    float: none;
+}
+
+
 #pairwise_main .skip_vote {
 	width: 100% !important;
 	background-color: #7D8874 !important;
