--- a/style.css
+++ b/style.css
@@ -2274,6 +2274,7 @@ input.button.with-text {
 	border-radius: 10px 10px 0 0;
 	border: 1px solid #b3c4a6;
 	border-bottom: 0px;
+	margin: -1px;
 }
 
 #pairwise_main .pairwise_content {
@@ -2283,22 +2284,25 @@ input.button.with-text {
 
 #pairwise_main .pairwise_body {
     background-color: white;
+    border-radius: 7px 7px 7px 7px;
     display: block;
-    margin: 1em;
+    font-size: 22px;
+    margin: 0 0 0.5em;
     padding: 1em;
-	 font-size: 22px;
 }
 
 #pairwise_main .pairwise_call_for_action {
     color: #4B7421;
     font-size: 14px;
+	 line-height: 1.5em;
 }
 
 #pairwise_main .prompt {
 	background-color: #cfe1bf !important;
 	border-width: 0px;
-	max-width: 360px;
-	min-height: 190px;
+   max-width: 369px;
+   height: 170px;
+   padding: 10px 0;
 	border-width: 0 !important;
 }
 
@@ -2308,7 +2312,12 @@ input.button.with-text {
 
 #pairwise_main .prompt a{
 	color: #2a2d28;
-	font-size: 14px;
+	/*font-size: 14px;*/
+	font-size: 12px;/*rEDUZIDO PARA CABER 160 CARACTERES.*/
+	display: block;
+	height: 170px;
+	max-width: 369px;
+	padding: 10px 0;
 }
 
 #pairwise_main .separator {
@@ -2401,13 +2410,14 @@ input.button.with-text {
 }
 
 #pairwise_main .div_text_input_container .suggest_idea_btn input#new_idea_button{
-    background: url("images/botao-enviar-pairwise.png") no-repeat top center #CCCCCC;
+    background: url("images/botao-enviar-pairwise.png") no-repeat top center transparent;
     border-radius: 0px;
     cursor: pointer;
     display: block;
     min-height: 71px;
     padding: 5px 10px;
     width: 93px;
+    border-width: 0;
 }
 
 
