--- a/style.css
+++ b/style.css
@@ -2298,7 +2298,8 @@ input.button.with-text {
 }
 
 #pairwise_main .prompt {
-	background-color: #cfe1bf !important;
+	/*background-color: #cfe1bf !important;*/
+	background: url("images/prompt_bg_normal.png") no-repeat top center #cfe1bf;
 	border-width: 0px;
    max-width: 369px;
    height: 170px;
@@ -2307,7 +2308,7 @@ input.button.with-text {
 }
 
 #pairwise_main .prompt:hover {
-	background: url("images/prompt_bg.png") no-repeat top center #548A1C;
+	background: url("images/prompt_bg_hover.png") no-repeat top center #548A1C;
 }
 
 #pairwise_main .prompt a{
