--- a/style.css
+++ b/style.css
@@ -2299,7 +2299,7 @@ input.button.with-text {
 
 #pairwise_main .prompt {
 	/*background-color: #cfe1bf !important;*/
-	background: url("images/prompt_bg_normal.png") no-repeat top center #cfe1bf;
+	background: url("images/prompt_bg_normal.png") no-repeat top center #cfe1bf !important;
 	border-width: 0px;
    max-width: 369px;
    height: 170px;
