--- a/style.css
+++ b/style.css
@@ -2302,7 +2302,7 @@ input.button.with-text {
 	background: url("images/prompt_bg_normal.png") no-repeat top center #cfe1bf !important;
 	border-width: 0px;
    max-width: 369px;
-   height: 170px;
+   height: 170px !important;
    padding: 10px 0;
 	border-width: 0 !important;
 }
