--- a/style.css
+++ b/style.css
@@ -905,7 +905,8 @@ ul.profile-list .common-profile-list-block {
 
 .common-profile-list-block .profile-image {
     display: block;
-    height: 100%;
+    height: 56px;
+    max-height: 100%;
     width: 100%;
 }
 
@@ -2108,9 +2109,11 @@ input.button.with-text {
 
 .box-2 .common-profile-list-block .profile-image, 
 .box-3 .common-profile-list-block .profile-image{
+    height: 56px;
 /*	 border: 1px solid #CCCCCC;
     height: 100%;
     margin: -1px;*/
+
 }
 
 
