--- a/style.css
+++ b/style.css
@@ -2276,6 +2276,14 @@ input.button.with-text {
 	border-bottom: 0px;
 }
 
+#pairwise_main ul.pairwise_menu li a.active{
+    color: #497B16;
+    background-color: #ECF2E7;
+    border-radius: 10px 10px 0 0;
+    border: 1px solid #b3c4a6;
+    border-bottom: 0px;
+}
+
 #pairwise_main .pairwise_content {
     background-color: #ECF2E7;
     padding: 1em;
