--- a/style.css
+++ b/style.css
@@ -2331,6 +2331,7 @@ input.button.with-text {
 	/*height: 170px;*/
 	max-width: 369px;
 	padding: 10px 0;
+    height: 100%;
 }
 
 #pairwise_main .separator {
