--- a/style.css
+++ b/style.css
@@ -2335,7 +2335,7 @@ input.button.with-text {
 }
 
 #pairwise_main .prompt:hover {
-	background: url("images/prompt_bg_hover.png") no-repeat center top #548A1C;
+	background: url("images/prompt_bg_hover.png") no-repeat 51% top #548A1C;
 }
 
 #pairwise_main .prompt a{
