--- a/style.css
+++ b/style.css
@@ -2350,8 +2350,12 @@ input.button.with-text {
 }
 
 #pairwise_main .separator {
+    background-color: #CCCCCC;
     display: inline-block;
     float: none;
+    height: 170px;
+    margin-top: 8px;
+    width: 1px;
 }
 
 
