--- a/style.css
+++ b/style.css
@@ -162,11 +162,29 @@ p {
 
 /*Registro de usuário*/
 
-.action-account-signup {}
-
 .action-account-signup form {
 	margin-right: 0px;
 }
+
+.action-account-signup .singup_text {
+	 display: inline-block;
+    float: left;
+    margin-right: 5%;
+    margin-top: 70px;
+    width: 30%;
+}
+
+.action-account-signup .signup-form-header,
+.action-account-signup .signup-form-profile {
+    display: inline-block;
+    float: right;
+    width: 60%;
+}
+
+.action-account-signup form>p {
+	clear: both;
+}
+
 
 
 /*Fim Registro de usuário*/
