--- a/style.css
+++ b/style.css
@@ -162,8 +162,8 @@ p {
 
 /*Registro de usuário*/
 
-.action-account-signup form {
-	margin-right: 0px;
+.action-account-signup .no-boxes form {
+    margin: 0px;
 }
 
 .action-account-signup .singup_text {
