--- a/style.css
+++ b/style.css
@@ -2364,8 +2364,17 @@ input.button.with-text {
 }
 
 #pairwise_main .prompt:hover {
-	background: url("images/prompt_bg_hover.png") no-repeat 51% top #548A1C;
+	background: url("images/prompt_bg_hover.png") no-repeat #548A1C;
 }
+
+#pairwise_main .prompt.left{
+	background-position: 51% top;
+}
+
+#pairwise_main .prompt.right{
+	background-position: 50% top;
+}
+
 
 #pairwise_main .prompt a{
 	color: #2a2d28 !important;
