--- a/style.css
+++ b/style.css
@@ -2784,6 +2784,9 @@ body.contraste #social-icons #sb_flickr:hover {
 }
 
 /* Plugin para curtir artigos e comentários */
+.pairwise-plugin_pairwise-content .vote-actions {
+  display: none;
+}
 
 .action .dislike:before {
   content: url(images/negative-hand.png);
