--- a/style.css
+++ b/style.css
@@ -2437,8 +2437,16 @@ input.button.with-text {
 }
 
 #pairwise_main .skip_vote a {
-	background: url("images/btn_duvida_pairwise.png") no-repeat center center #fff !important;	
-	display: block;
+	 background: url("images/btn_duvida_pairwise.png") no-repeat center center #fff !important;	
+
+    background-color: #CCCCCC;
+    color: white;
+	 display: inline-block;
+    height: 1px;
+    line-height: 0;
+    padding: 1em 0;
+    text-decoration: none;
+    width: 150px;
 	
 }
 
