--- a/style.css
+++ b/style.css
@@ -2296,7 +2296,7 @@ input.button.with-text {
 
 .relevant-content-plugin_relevant-content-block{}
 
-.relevant-content-plugin_relevant-content-block .block{
+.action-home-index #content .block-outer .block .block{
     display: inline-block;
     left: 0;
     margin-bottom: 14px;
