--- a/style.css
+++ b/style.css
@@ -2428,6 +2428,9 @@ input.button.with-text {
 #pairwise_main .skip_vote {
 	width: 100% !important;
 	text-align: center;
+	padding: 0;
+	border-width: 0px;
+	background-color: transparent !important;
 /* background-color: #7D8874 !important;
 	font-size: 15px !important;
 	color: #fff;
@@ -2440,7 +2443,7 @@ input.button.with-text {
 	 background: url("images/btn_duvida_pairwise.png") no-repeat center center #fff !important;	
 
     background-color: #CCCCCC;
-    color: white;
+    color: transparent !important;
 	 display: inline-block;
     height: 1px;
     line-height: 0;
