--- a/style.css
+++ b/style.css
@@ -994,6 +994,7 @@ ul.profile-list .common-profile-list-block {
 .action-home-index #wrap-2,
 .action-environment_design-index #wrap-2  {
 	background: url(images/bg-palacio-do-planalto.jpg) no-repeat fixed center top;
+  background-size: 100%;
 }
 
 /***************content*************/
