--- a/style.css
+++ b/style.css
@@ -2483,6 +2483,7 @@ input.button.with-text {
 #pairwise_main .pairwise_content {
     background-color: #ECF2E7;
     padding: 1em;
+	 overflow: hidden;
 }
 
 #pairwise_main .pairwise_body {
@@ -2517,10 +2518,12 @@ input.button.with-text {
 
 #pairwise_main .prompt.left{
 	background-position: 51% top;
+	float: left;
 }
 
 #pairwise_main .prompt.right{
 	background-position: 50% top;
+	float: right;
 }
 
 #pairwise_main .prompt a{
