--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ p {
 }
 
 #TB_window .login-box h2{
-    background: url("images/bg-titulo-interno.png") repeat-x scroll 0 0 #FFFFFF;
+    background: url("images/bg-titulo-login.png") repeat-x scroll 0 0 #FFFFFF;
     color: #757575;
     font-size: 20px;
     font-style: italic;
