--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ p {
     padding: 15px;
     position: relative;
     width: auto !important;
+	 height: auto !important;
 }
 
 #TB_window .login-box{
