--- a/style.css
+++ b/style.css
@@ -2447,6 +2447,10 @@ input.button.with-text {
     padding: 0.5em 1em;
 }
 /*Pairwise*/
+.action-home-index div.pairwise_main .spinner {
+  width: 94%;
+}
+
 .pairwise-plugin_pairwise-content #article-header .title {
   display: none;
 }
