--- a/header.rhtml
+++ b/header.rhtml
@@ -1,6 +1,11 @@
+<!-- <div id="barra-brasil">
+    <a href="http://brasil.gov.br" style="background:#7F7F7F; height: 20px; padding:4px 0 4px 10px; display: block; font-family:sans,sans-serif; text-decoration:none; color:white; ">Portal do Governo Brasileiro</a>
+</div> -->
+
 <div id="barra-brasil">
     <a href="http://brasil.gov.br" style="background:#7F7F7F; height: 20px; padding:4px 0 4px 10px; display: block; font-family:sans,sans-serif; text-decoration:none; color:white; ">Portal do Governo Brasileiro</a>
 </div>
+
 <div class="header-content">
   <div role="banner" id="header">
     <div>
