--- a/footer.rhtml
+++ b/footer.rhtml
@@ -17,5 +17,5 @@
 </div>
 
 <!-- <script type="text/javascript" src="http://barra.brasil.gov.br/barra.js?cor=verde"></script> -->
-
+<script src="http://barra.brasil.gov.br/barra.js" type="text/javascript"></script>
 
