--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
 #barra-brasil {
     z-index: 99;
 	 width: 100%;
-	 border-bottom: 1px solid #CCCCCC;
+	 border-bottom: 1px solid #eee;
 }
 
 div#wrapper-barra-brasil {
