--- a/style.css
+++ b/style.css
@@ -787,6 +787,13 @@ p {
     margin-top: 5px;
 }
 
+
+#page-comment-form .post_comment_box {
+	 display: inline-block;
+    padding: 5px;
+    text-align: left;
+}
+
 /* fim de comentário*/
 
 /*paginação*/
@@ -1372,6 +1379,7 @@ input.button.with-text {
 #content form input.button.submit {
     height: 32px;
     max-height: 32px;
+	 margin-right: 5px;
 }
 
 #content #article-actions input.button:hover, 
@@ -3129,3 +3137,47 @@ body.action-embed-index {
 }
 
 /* }}} */
+
+/*estilos do HUB*/
+
+.hub .post{
+	background: url("images/hub-time-bg.gif") repeat-y	left top #fff;
+}
+
+.hub .remove{
+	background: url("images/hub-remove-icon.png") no-repeat center center #fff;
+}
+
+.hub .promote{
+	background: url("images/hub-promote-icon.png") no-repeat center center #fff;
+}
+
+.hub .pin{
+	background: url("images/hub-pin-icon.png") no-repeat center center #fff;
+}
+.hub ul.settings li{
+	 position: relative;
+	 background: url("images/hub-arrow-right.png") no-repeat scroll 95% 50% #ED8E01;
+	 overflow: hidden;
+	 z-index:999;
+}
+
+
+
+.hub ul.settings li.twitter:hover{
+	 background: url("images/hub-arrow-up.png") no-repeat scroll 95% 50% #ED8E01;
+	 min-height: 50px;
+	 height: auto;
+}
+
+.hub ul.settings li.twitter label{    
+	 color: white;
+    display: block;
+    font-style: oblique;
+    line-height: 1.5em;
+	 margin-bottom: 5px;
+}
+
+.hub ul.settings li.twitter input{margin-bottom: 10px; margin-right: 5px;}
+
+.hub ul.settings li.twitter input.btn-ok {}
