Added flags for localization

--- a/header.rhtml
+++ b/header.rhtml
@@ -91,4 +91,8 @@
   <div id="categories_menu">
     <%= theme_include 'categories' %>
   </div>
+  <div id="participa-languages">
+    <a href="?lang=pt" class="flag-pt" title="Português"><span>Português</span></a>
+    <a href="?lang=en" class="flag-en" title="English"><span>English</span></a>
+  </div>
 </div>
