--- a/style.css
+++ b/style.css
@@ -3182,3 +3182,29 @@ body.action-embed-index {
 .hub ul.settings li.twitter input{margin-bottom: 10px; margin-right: 5px;}
 
 .hub ul.settings li.twitter input.btn-ok {}
+
+/* * Internacionalização * */
+
+#participa-languages {
+  position: absolute;
+  top: 12px;
+  right: 10px;
+  padding: 0px;
+  z-index: 100;
+}
+
+#participa-languages a {
+  color: #333;
+  text-decoration: none;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  display: inline-block;
+  height: 17px;
+  width: 25px;
+  margin-left: 5px;
+}
+
+.flag-en { background-image: url(images/flag-en.png) }
+.flag-pt { background-image: url(images/flag-pt_br.png) }
+
+#participa-languages a span{ display: none }
