fix pairwise embeded

--- a/style.css
+++ b/style.css
@@ -3021,7 +3021,18 @@ body.action-embed-index {
   width: 100%;
   height: 100%;
   display: table;
-  position: absolute;
+}
+
+#embed #content {
+    left: 0;
+    margin-left: 0;
+    margin-top: 0;
+    position: relative;
+    width: 100%;
+}
+
+#embed #content .title {
+    padding-right: 0px;
 }
 
 .action-embed-index #boxes,
