--- a/errors.css
+++ b/errors.css
@@ -1,24 +1,65 @@
 @import url(../base/errors.css);
 
 body {
-	background-image: radial-gradient(ellipse at center center , #FCDD4E 1%, #F9C404 100%);
+	background-image: url(images/fundo-de-tela-amarelo.png);
 	font-family: 'Open Sans',Arial,Helvetica,sans-serif;
 }
 #logo {
-   background: url(images/503-logo.jpg) 20px 0px no-repeat;
+   background: url(images/logo-participa.png);
+   top: 320px;
+   left: 20px;
+   position: absolute;
+   height:92px;
+   width:108px;
+}
+
+div.message h1 {
+  border-bottom: 0px;
+  left: 170px;
+  position: relative;
+  margin-top: -20px;
+}
+
+div.message p {
+  left: 170px;
+  position: relative;
+  font-size: 16px;
+  width: 400px;
+  color: #999;
 }
 
 #header {
-  background: #ccc url(imgs/menu-top-bg-right.png) top right no-repeat;
-  height: 42px;
+  background: url(images/oops.png) top left no-repeat;
+  height: 142px;
+  margin-left: 20px;
   margin-top: 48px;
   position: relative;
 }
 
 
 #wrap {
-  margin: 20px 20px 0px 20px;
-  border: 1px solid #d3d7cf;
-  background: white url(images/503.jpg) 100% 100% no-repeat;
-  height: 680px;
+  margin: 120px 20px 0px 20px;
+  border: 1px solid #F2C311;
+  background: white url(images/mascote-bug.png) 100% 100% no-repeat;
+  height: 480px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  -webkit-box-shadow: 7px 7px 7px 0px rgba(196, 159, 20, 0.75);
+  -moz-box-shadow:    7px 7px 7px 0px rgba(196, 159, 20, 0.75);
+  box-shadow:         7px 7px 7px 0px rgba(196, 159, 20, 0.75);
+}
+
+#languages {
+  top: 600px;
+  position: absolute;
+  text-align: center;
+  width: 860px;
+  border-top: 0px;
+}
+
+#languages a {
+  font-variant: small-caps;
+  color: black;
+  font-size: 14px;
 }
