--- a/style.css
+++ b/style.css
@@ -1237,7 +1237,7 @@ li.event-dates {
     color: #444;
     font-size: 1.7em;
     padding: 7px 0;
-    margin-left: 0 !important;
+    margin-left: 0/* !important*/;
     padding-left: 0.3em;
     border-bottom: 1px solid #CCCCCC;
     border-top: 0px solid #172838;
